--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -236,6 +236,12 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>gwt-maven-plugin</artifactId>
                     <version>2.4.0</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>gwt-maven-plugin</artifactId>
+                    <version>2.4.0</version>
                     <executions>
                         <execution>
                             <goals>
