--- a/trunk/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/src/main/webapp/WEB-INF/web.xml
@@ -24,15 +24,64 @@
 
     <display-name>AggreData</display-name>
 
+    <!--Spring context listener to load the log4j from an external file source-->
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>file:aggredata.log4j.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+
+
+    <!--++ Spring Configuration ++ -->
+    <!-- Spring config location -->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:applicationContext.xml
+                     classpath:security-app-context.xml
+        </param-value>
+    </context-param>
+
+    <!-- Starts up Spring -->
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+
+    <listener>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+
+
+    <!--Spring Security Authentication Filter -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
     <servlet>
         <servlet-name>AggreDataUserService</servlet-name>
         <servlet-class>com.ted.aggredata.server.guiServiceImpl.AggreDataUserServiceImpl</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>UserSessionService</servlet-name>
+        <servlet-class>com.ted.aggredata.server.guiServiceImpl.UserSessionServiceImpl</servlet-class>
+    </servlet>
+
 
     <servlet-mapping>
-        <servlet-name>AggreDataUserService</servlet-name>
-        <url-pattern>/Aggredata/AggreDataUserService</url-pattern>
+        <servlet-name>UserSessionService</servlet-name>
+        <url-pattern>/Aggredata/UserSessionService</url-pattern>
     </servlet-mapping>
 
 </web-app>
