--- a/trunk/config/aggredata.properties
+++ b/trunk/config/aggredata.properties
@@ -29,3 +29,8 @@ jdbc.partitionCount=3
 jdbc.acquireIncrement=5
 jdbc.statementsCacheSize=100
 jdbc.releaseHelperThreads=3
+
+
+#####Server Info #######
+server.name=127.0.0.1
+server.port=8888
