Added standalone page to display activation instructions.

--- a/config/aggredata.properties
+++ b/config/aggredata.properties
@@ -34,3 +34,8 @@ jdbc.releaseHelperThreads=3
 #####Server Info #######
 server.name=127.0.0.1
 server.port=8888
+
+####Posting Setting
+server.useHttps=false
+server.postDelay=1    #should be a value between 1 and 15
+server.useHighPrecision=true
