--- a/trunk/config/aggredata.properties
+++ b/trunk/config/aggredata.properties
@@ -37,5 +37,5 @@ server.port=8888
 
 ####Posting Setting
 server.useHttps=false
-server.postDelay=1    #should be a value between 1 and 15
+server.postDelay=1
 server.useHighPrecision=true
