Modified data model to allow for an MTU to be moved from one gateway to another.

--- a/config/aggredata.properties
+++ b/config/aggredata.properties
@@ -37,5 +37,5 @@ server.port=8888
 
 ####Posting Setting
 server.useHttps=false
-server.postDelay=1    #should be a value between 1 and 15
+server.postDelay=1
 server.useHighPrecision=true
