--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -94,10 +94,18 @@
         <servlet-class>com.ted.aggredata.server.web.servlets.EnergyPostServlet</servlet-class>
     </servlet>
 
+
     <servlet>
         <servlet-name>ActivationServlet</servlet-name>
         <servlet-class>com.ted.aggredata.server.web.servlets.ActivationServlet</servlet-class>
     </servlet>
+
+
+    <servlet>
+        <servlet-name>HistoryExportServlet</servlet-name>
+        <servlet-class>com.ted.aggredata.server.web.servlets.HistoryExportServlet</servlet-class>
+    </servlet>
+
 
     <servlet-mapping>
         <servlet-name>UserSessionService</servlet-name>
@@ -125,6 +133,13 @@
         <servlet-name>ActivationServlet</servlet-name>
         <url-pattern>/activate</url-pattern>
     </servlet-mapping>
+
+
+    <servlet-mapping>
+        <servlet-name>HistoryExportServlet</servlet-name>
+        <url-pattern>/historyexport</url-pattern>
+    </servlet-mapping>
+
 
     <servlet-mapping>
         <servlet-name>EnergyPostServlet</servlet-name>
