Added ability to edit custom field labels from the properties file.

--- a/config/aggredata.properties
+++ b/config/aggredata.properties
@@ -42,3 +42,24 @@ server.useHighPrecision=true
 
 server.timezone=US/Eastern
 
+
+
+#### Custom Labels.  Leave the line blank to hide the field.
+
+users.custom1=Utility Provider
+users.custom2=
+users.custom3=
+users.custom4=
+users.custom5=
+
+groups.custom1=Custom 1
+groups.custom2=Custom 2
+groups.custom3=Custom 3
+groups.custom4=
+groups.custom5=
+
+gateways.custom1=Custom 1
+gateways.custom2=Custom 2
+gateways.custom3=
+gateways.custom4=
+gateways.custom5=
