--- a/trunk/config/aggredata.properties
+++ b/trunk/config/aggredata.properties
@@ -39,9 +39,24 @@ server.port=8888
 server.useHttps=false
 server.postDelay=1
 server.useHighPrecision=true
-
 server.timezone=US/Eastern
 
+
+#User registration settings
+server.allowRegistraion = true
+server.allowPasswordReset = true
+
+#server email address settings
+server.fromAddress=donotreply@theenergydetective.com
+server.adminEmailAddress=admin@theenergydetective.com
+
+
+#smtp settings
+smtp.host = 127.0.0.1
+smtp.port = 25
+smtp.useAuthentication = false
+#smtp.username = username
+#smtp.password = password
 
 
 #### Custom Labels.  Leave the line blank to hide the field.
