--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -223,7 +223,18 @@
             <artifactId>gwt-visualization</artifactId>
             <version>1.1.1</version>
         </dependency>
-        
+
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.6.4</version>
+        </dependency>
 
     </dependencies>
 
