Added database save, validation, and email to new user creation

--- a/config/aggredata.properties
+++ b/config/aggredata.properties
@@ -45,6 +45,7 @@ server.timezone=US/Eastern
 #User registration settings
 server.allowRegistraion = true
 server.allowPasswordReset = true
+server.useCaptcha = true
 
 #server email address settings
 server.fromAddress=donotreply@theenergydetective.com
